<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Boxee</string>

	<string name="menu_mode">Mode</string>

	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
		
	<string name="settings">Settings</string>
	<string name="host_title">Host</string>
	<string name="host_summary">Hostname of the server. Leave blank for Boxee autodiscovery.</string>
	<string name="port_title">Port</string>
	<string name="port_summary">Port of the boxee service, 8800 by default. Unused in autodiscovery.</string>
	<string name="no_wifi">Wifi unavailable, cannot access local boxee host. Connect to wifi or disable this check in settings</string>
	<string name="require_wifi_title">Require Wifi Connection</string>
	<string name="require_wifi_yes">Wifi must be active</string>
	<string name="require_wifi_no">Allow connection over mobile internet</string>
	<string name="scan">Scan for Boxees</string>
	<string name="help">Help</string>
	<string name="none_found">Found no Boxee servers</string>
	<string name="title_discovery">Automatic Discovery</string>
	<string name="summary_discovery">Discover server automatically</string>
	<string name="discovered_name">Name of discovered server</string>
	<string name="discovered_summary">To set, run a scan from the main menu.</string>
	<string name="timeout_summary">Timeout for HTTP requests in milliseconds</string>
	<string name="timeout_title">Timeout</string>
	<string name="user_title">Username</string>
	<string name="user_summary">Webserver username, default "xbox"</string>
	<string name="password_title">Password</string>
	<string name="network_section">Network</string>
	<string name="password_summary">Only needed if you set a password on your server</string>
	<string name="progress_scanning">scanning...</string>
	<string name="title_servers">Servers</string>
	<string name="preference_sensitivity">Sensitivity</string>
	<string name="custom_server">Custom server...</string>
</resources>
