<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android">
			
    <PreferenceScreen
        android:key="name"
        android:title="Boxee Server"
        />
	
    <net.supware.boxee.SeekBarPreference  
        android:key="sensitivity"
        android:defaultValue="50"
        android:title="@string/preference_sensitivity" 
        />  
		
	<CheckBoxPreference 
		android:key="require_wifi"
		android:title="@string/require_wifi_title" 
		android:summaryOn="@string/require_wifi_yes"
		android:summaryOff="@string/require_wifi_no" 
		android:defaultValue="true"
		/>

	<EditTextPreference 
		android:key="timeout" 
		android:title="@string/timeout_title"
		android:summary="@string/timeout_summary"
		android:defaultValue="2000"
		/>
	
</PreferenceScreen>